--- a/styles/buttons/alina.scss
+++ b/styles/buttons/alina.scss
@@ -5,6 +5,7 @@ $alina-primary: #7100ff;
   font-family: Avenir bold, sans-serif;
   background-image: linear-gradient(black 64%, #2800b8 65%);
   height: 310px;
+  overflow: hidden;
 
   h1 {   
     position: relative;
